# cmake-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: tianji.cmake
lib/: library.cpp  library.hpp  library.test.cpp
